--- a/App_LocalResources/View.ascx.resx
+++ b/App_LocalResources/View.ascx.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConfirmDelete.Text" xml:space="preserve">
+    <value>Are you sure you want to delete this Game?</value>
+  </data>
+  <data name="DeleteGame.Text" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="EditGame.Text" xml:space="preserve">
+    <value>Edit</value>
+  </data>
   <data name="EditModule.Text" xml:space="preserve">
     <value>Edit Module</value>
   </data>
