--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -8,7 +8,7 @@
 <div class="License">
 	<h3>Serenity Gaming is a FYP project developed By Kevin O'Sullivan. This module will cover the Game Distribution aspect of the project being implemented.</h3>
 	<p class="Owner">
-		<b>Version 00.00.04 File Uploads Enabled Requires folder SGData/images and SGData/installers Contact host/admin for any issues.</b><br /><br />
+		<b>Version 00.00.05 File Uploads Enabled Requires folder SGData/images and SGData/installers Contact host/admin for any issues.</b><br /><br />
 	</p>
 	<p>
 		File uploads enabled in Game Manager for latest release but not tracked in DB yet so doesn't tie back into list of games.
@@ -16,7 +16,7 @@
 	
 	<h4>Bug Fixes</h4>
 	<ul>
-			<li>No Bugs Fixes Listed</li>
+			<li>Fixed v00.00.05 issue with SQL script changing primary key on Game Table</li>
 	</ul>
 	
 </div>
