--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -8,15 +8,15 @@
 <div class="License">
 	<h3>Serenity Gaming is a FYP project developed By Kevin O'Sullivan. This module will cover the Game Distribution aspect of the project being implemented.</h3>
 	<p class="Owner">
-		<b>Version 00.00.05 File Uploads Enabled Requires folder SGData/images and SGData/installers Contact host/admin for any issues.</b><br /><br />
+		<b>Version 01.00.00 Initial Prod Site Version.</b><br /><br />
 	</p>
 	<p>
-		File uploads enabled in Game Manager for latest release but not tracked in DB yet so doesn't tie back into list of games.
+		Version 1 of Serenity Gaming to be released to Production. This has all the default behavior for game distribtuion and includes a donate button for the developer. It still requires a visual design overhaul.
 	</p>
 	
 	<h4>Bug Fixes</h4>
 	<ul>
-			<li>Fixed v00.00.05 issue with SQL script changing primary key on Game Table</li>
+			<li>No Bugs Listed</li>
 	</ul>
 	
 </div>
