--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -8,15 +8,15 @@
 <div class="License">
 	<h3>Serenity Gaming is a FYP project developed By Kevin O'Sullivan. This module will cover the Game Distribution aspect of the project being implemented.</h3>
 	<p class="Owner">
-		<b>Version 01.02.00</b><br /><br />
+		<b>Version 01.02.01</b><br /><br />
 	</p>
 	<p>
-		Version 1.02.00 Overhaul on handling of files for module.
+		Version 1.02.01 Fixing bug with images.
 	</p>
 	
 	<h4>Bug Fixes</h4>
 	<ul>
-			<li>Files/Installers now sotred in folder structure per developer and placeholders stored withing modules. This will aleiviate issues for developer and module host</li>
+			<li>Fixing issue where placeholder image was being used instead of uploaded ones.</li>
 	</ul>
 	
 </div>
